MF-268: Fixed logo overlapping menu items on smaller devices

--- a/src/dashboard/home-dashboard.component.css
+++ b/src/dashboard/home-dashboard.component.css
@@ -4,10 +4,13 @@
 }
 
 .homeDashboard {
-  height: calc(100vh - var(--omrs-topnav-height) - 10rem);
   display: flex;
   justify-content: center;
   margin: 0 auto;
+}
+
+:global(.omrs-breakpoint-gt-phone) .homeDashboard {
+  height: calc(100vh - var(--omrs-topnav-height) - 10rem);
 }
 
 .mainSection {
